# pull-deployment

./: .release-please-manifest.json  README.md  release-please-config.json
.github/workflows/: build-and-release.yml
client/: index.ts
client/website/: action.yml
remote/: .gitignore  CHANGELOG.md  Dockerfile  main.py  pyproject.toml
remote/domains/shared/: models.py
remote/domains/website/: config.py  git.py  models.py  router.py  service.py
remote/domains/website/internal/: config.py  git.py  models.py  service.py
remote/tests/: conftest.py
remote/tests/unit/domains/website/: test_config.py  test_git.py  test_service.py
