[project]
name = "remote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
]

[tool.pyrefly]
project-includes = ["domains/**", "main.py"]
project-excludes = [
    "**/__pycache__",
    "**/*venv/**/*",
]
