[project]
name = "pull-deployment-remote"
version = "0.1.0"
description = "Remote part of pull based deployment system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coveo-ref>=2.0.1",
    "fastapi-limiter>=0.2.0",
    "fastapi[standard]>=0.128.0",
    "frozendict>=2.4.7",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pyrefly]
project-includes = ["domains/**", "tests/**", "main.py"]
project-excludes = [
    "**/__pycache__",
    "**/*venv/**/*",
]
